Bug 390834 - Scheduled transactions: "Enter next transaction" should be available in ledger
Summary: Scheduled transactions: "Enter next transaction" should be available in ledger
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 391062 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-02-21 06:32 UTC by kerub
Modified: 2018-02-26 20:14 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kerub 2018-02-21 06:32:55 UTC
Overview: Greyed out entries for scheduled transactions (previews in ledgers) do not feature the "Enter next transaction" option in the context menu.

Steps to reproduce: Have a scheduled transaction, let KMyMoney enter future transactions, use context menu.

Context: This feature was available in KMyMoney right up until 4.8.2, so it seems like an oversight that it is missing in 5.0.0. It appears much more natural to enter the next transaction in the ledger that it applies to, than go to Scheduled transactions, find the right entry and then use Enter next transaction.
Comment 1 Felix 2018-02-21 07:02:53 UTC
I am having exactly the same problem, and is very annoying: I have about 30 scheduled transactions and going to "Scheduled transactions" after seeing them in the ledger, to have them entered and then return to the ledger is not handy at all. As this is a functionality rather basic that is missing, can the Importance be changed to "Major"?
Comment 2 wojnilowicz 2018-02-23 17:26:09 UTC
Git commit 85903f6520eb48e545c60e7e75661f3c962061c1 by Łukasz Wojniłowicz.
Committed on 23/02/2018 at 17:25.
Pushed by wojnilowicz into branch 'master'.

Handle scheduled transactions in ledgers
FIXED-IN:5.0.1

Differential Revision: https://phabricator.kde.org/D10720

M  +2    -3    kmymoney/views/kgloballedgerview.cpp
M  +1    -0    kmymoney/views/kgloballedgerview_p.h
M  +1    -0    kmymoney/views/kmymoneyview.cpp

https://commits.kde.org/kmymoney/85903f6520eb48e545c60e7e75661f3c962061c1
Comment 3 Thomas Baumgart 2018-02-23 18:22:10 UTC
Git commit 1c908e64dd25576cca6e5b9f7e3fd108e9e024d2 by Thomas Baumgart.
Committed on 23/02/2018 at 17:39.
Pushed by tbaumgart into branch '5.0'.

Handle scheduled transactions in ledgers
FIXED-IN:5.0.1

Differential Revision: https://phabricator.kde.org/D10720

(cherry picked from commit 85903f6520eb48e545c60e7e75661f3c962061c1)

M  +2    -3    kmymoney/views/kgloballedgerview.cpp
M  +1    -0    kmymoney/views/kgloballedgerview_p.h
M  +1    -0    kmymoney/views/kmymoneyview.cpp

https://commits.kde.org/kmymoney/1c908e64dd25576cca6e5b9f7e3fd108e9e024d2
Comment 4 Thomas Baumgart 2018-02-26 20:14:55 UTC
*** Bug 391062 has been marked as a duplicate of this bug. ***