Handle scheduled transactions in ledgers

BUG:390834
FIXED-IN:5.0.1

Differential Revision: https://phabricator.kde.org/D10720